Fixed the letter spacing not word spacing

--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -408,7 +408,7 @@
   a:link{
       color: var(--text-color);
       text-decoration: none;
-  }
+  }--nav-item-font-family
   a:visited{
       font-style: italic;
   }
@@ -468,7 +468,7 @@
         font-family: var(--nav-item-font-family);
         font-weight: var(--nav-item-font-weight);
         font-size: var(--nav-item-font-size);
-        word-spacing: var(--nav-item-letter-spacing);
+        letter-spacing: var(--nav-item-letter-spacing);
         display: var(--nav-item-display);
         margin: var(--nav-item-margin);
       }
